--- a/evothings/rfglow-ble/www/index.html
+++ b/evothings/rfglow-ble/www/index.html
@@ -24,7 +24,7 @@
 
     <script src="js/app.js"></script>
   </head>
-  <body ng-controller="RfglowCtrl" class="platform-ios">
+  <body ng-controller="RfglowCtrl">
     <ion-pane>
       <ion-content scroll="false">
           <div class="row">
@@ -68,7 +68,7 @@
     </ion-pane>
     <script id="templates/ble-popover.html" type="text/ng-template">
       <ion-modal-view class="modal-float card">
-        <ion-header-bar class="bar-dark">
+        <ion-header-bar class="bar-assertive">
             <h1 class="title">BLE Status: {{ble.state}}</h1>
         </ion-header-bar>
         <ion-content class="center">
